--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,15 @@
           </div>
         </div>
       </div>
-      <div id="recomendadas"></div>
+      <div class="p-20" id="recomendadas">
+        <div class="w-48 h-64 shadow-md rounded-lg">
+          <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
+          <div class="w-full h-2/5 bg-secondary rounded-b-lg">
+            <p class="text-white text-bold text-lg px-4 py-2">Norway</p>
+            <p class="text-white text-md px-4">Paisajes Increíbles</p>
+          </div>
+        </div>
+      </div>
       <div id="rentas_destacadas"></div>
     </section>
     <footer></footer>
