--- a/src/index.html
+++ b/src/index.html
@@ -36,16 +36,42 @@
             </button>
           </div>
           <div class="w-full h-full">
-            <img src="../public/img/sanFrancisco.jpg" alt="San Francisco" />
+            <img src="./img/sanFrancisco.jpg" alt="San Francisco" />
           </div>
         </div>
       </div>
-      <div class="p-20" id="recomendadas">
-        <div class="w-48 h-64 shadow-md rounded-lg">
-          <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
-          <div class="w-full h-2/5 bg-secondary rounded-b-lg">
-            <p class="text-white text-bold text-lg px-4 py-2">Norway</p>
-            <p class="text-white text-md px-4">Paisajes Increíbles</p>
+      <div class="p-6" id="recomendados">
+        <p class="text-3xl font-semibold text-primary">Recomendados</p>
+        <div
+          class="w-auto h-72 items-center mt-6 overflow-x-auto overscroll-contain flex space-x-6"
+        >
+          <div class="Card">
+            <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
+            <div class="w-full h-2/5 bg-secondary rounded-b-lg">
+              <p class="text-white text-bold text-lg px-4 py-2">Norway</p>
+              <p class="text-white text-md px-4">Paisajes Increíbles</p>
+            </div>
+          </div>
+          <div class="Card">
+            <div class="w-full h-3/5 rounded-t-lg bg-new_york bg-cover"></div>
+            <div class="w-full h-2/5 bg-white rounded-b-lg">
+              <p class="text-terciary text-bold text-lg px-4 py-2">New York</p>
+              <p class="text-terciary text-md px-4">La gran manzana</p>
+            </div>
+          </div>
+          <div class="Card">
+            <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
+            <div class="w-full h-2/5 bg-secondary rounded-b-lg">
+              <p class="text-white text-bold text-lg px-4 py-2">Norway</p>
+              <p class="text-white text-md px-4">Paisajes Increíbles</p>
+            </div>
+          </div>
+          <div class="Card">
+            <div class="w-full h-3/5 rounded-t-lg bg-new_york bg-cover"></div>
+            <div class="w-full h-2/5 bg-white rounded-b-lg">
+              <p class="text-terciary text-bold text-lg px-4 py-2">New York</p>
+              <p class="text-terciary text-md px-4">La gran manzana</p>
+            </div>
           </div>
         </div>
       </div>
