--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,27 @@
           </div>
         </div>
       </div>
-      <div id="rentas_destacadas"></div>
+      <div class="px-2 h-full w-full" id="rentas_destacadas">
+        <p class="text-3xl text-primary font-semibold pb-6 mt-6">
+          Rentas Destacadas
+        </p>
+        <div
+          class="w-full h-full flex flex-col space-y-6 items-center justify-center"
+        >
+          <div class="w-full h-96 bg-chicago bg-cover rounded-xl">
+            <p class="CardTitle">Chicago</p>
+            <p class="text-sm pl-8 text-black mr-24">
+              2 habitaciones, baño, cocina
+            </p>
+          </div>
+          <div class="w-full h-96 bg-iceland bg-cover rounded-xl">
+            <p class="CardTitle">Iceland</p>
+            <p class="text-sm pl-8 text-black mr-24">
+              2 habitaciones, baño, cocina
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
     <footer></footer>
   </body>
