Sección de FAQS

--- a/src/index.html
+++ b/src/index.html
@@ -108,6 +108,51 @@
               2 habitaciones, baño, cocina
             </p>
           </div>
+          <div class="w-full h-96 bg-bali bg-cover rounded-xl">
+            <p class="CardTitle">Bali</p>
+            <p class="text-sm pl-8 text-white mr-24">
+              2 habitaciones, baño, cocina
+            </p>
+          </div>
+          <div class="w-full h-96 bg-Miami bg-cover rounded-xl">
+            <p class="CardTitle">Miami</p>
+            <p class="text-sm pl-8 text-white mr-24">
+              2 habitaciones, baño, cocina
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="w-full h-full" id="faqs">
+        <div class="w-full h-full px-6 flex flex-col space-y-2">
+          <p class="text-3xl text-primary font-semibold">FAQs</p>
+          <div>
+            <p class="text-xl font-medium text-primary">Payment Methods</p>
+            <p class="text-md pt-2">
+              We accept VISA, MasterCard, American Express, Paypal and Binance,
+              We accept VISA, MasterCard, American Express, Paypal and Binance.
+            </p>
+          </div>
+          <div>
+            <p class="text-xl font-medium text-primary">Payment Methods</p>
+            <p class="text-md pt-2">
+              We accept VISA, MasterCard, American Express, Paypal and Binance,
+              We accept VISA, MasterCard, American Express, Paypal and Binance.
+            </p>
+          </div>
+          <div>
+            <p class="text-xl font-medium text-primary">Payment Methods</p>
+            <p class="text-md pt-2">
+              We accept VISA, MasterCard, American Express, Paypal and Binance,
+              We accept VISA, MasterCard, American Express, Paypal and Binance.
+            </p>
+          </div>
+          <div>
+            <p class="text-xl font-medium text-primary">Payment Methods</p>
+            <p class="text-md pt-2">
+              We accept VISA, MasterCard, American Express, Paypal and Binance,
+              We accept VISA, MasterCard, American Express, Paypal and Binance.
+            </p>
+          </div>
         </div>
       </div>
     </section>
