--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,14 @@
           </div>
         </div>
       </div>
+      <footer class="w-full h-64 bg-gray-50 p-6 space-y-2">
+        <p class="text-lg">Acerca de</p>
+        <p class="text-sm text-gray-300">Acerca de</p>
+        <p class="text-sm text-gray-300">Inversión</p>
+        <p class="text-sm text-gray-300">Empleos</p>
+        <p class="text-sm text-gray-300">Términos y Condiciones</p>
+        <p class="text-sm text-gray-300">Platzin Travel, .INC</p>
+      </footer>
     </section>
-    <footer></footer>
   </body>
 </html>
