Haciendo responsivo nuestro proyecto

--- a/src/index.html
+++ b/src/index.html
@@ -21,21 +21,32 @@
       <div id="home">
         <div class="w-full h-3/4">
           <div
-            class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center"
+            class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center lg:space-y-0 lg:items-start lg:pt-20 lg:justify-start"
           >
             <input
-              class="outline-none p-3 rounded-full shadow-sm transition duration-300 focus-within:shadow-sm focus:ring-2 focus:w-11/12"
+              class="outline-none p-3 rounded-full shadow-sm transition duration-300 focus-within:shadow-sm focus:ring-2 focus:w-11/12 lg:hidden"
               type="search"
               placeholder="San Francisco"
             />
+            <div class="hidden h-auto lg:w-2/5 lg:flex lg:pb-6">
+              <p class="text-4xl ml-16 font-bold text-black">
+                Encuentra más ubicaciones como esta.
+              </p>
+            </div>
             <button
-              class="bg-white text-xl text-primary shadow-sm font-semibold p-4 w-32 rounded-full transition-all duration-500 ease-out hover:bg-primary hover:text-white transform hover:-translate-y-1 hover:scale-110"
+              class="bg-white text-xl text-primary shadow-sm font-semibold p-4 w-32 rounded-full transition-all duration-500 ease-out hover:bg-primary hover:text-white transform hover:-translate-y-1 hover:scale-110 lg:ml-16"
             >
               Explorar
             </button>
           </div>
-          <div class="w-full h-full">
-            <img src="./img/sanFrancisco.jpg" alt="San Francisco" />
+          <div
+            class="w-full h-full lg:h-96 lg:bg-sanFranciscoDesktop lg:bg-cover lg:bg-center"
+          >
+            <img
+              class="lg:hidden"
+              src="./img/sanFrancisco.jpg"
+              alt="San Francisco"
+            />
           </div>
         </div>
       </div>
@@ -165,7 +176,7 @@
     </section>
     <div
       id="tab_bar"
-      class="w-full h-16 bg-white fixed left-0 bottom-0 shadow-md flex space-x-8 items-center justify-center"
+      class="w-full h-16 bg-white fixed left-0 bottom-0 shadow-md flex space-x-8 items-center justify-center lg:hidden"
     >
       <a href="#home">
         <svg
