--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           </div>
         </div>
       </div>
-      <div class="p-6" id="recomendados">
+      <div class="h-auto w-full px-6 mt-6" id="recomendados">
         <p class="text-3xl font-semibold text-primary">Recomendados</p>
         <div
           class="w-auto h-72 items-center mt-6 overflow-x-auto overscroll-contain flex space-x-6 overflow-y-hidden"
@@ -99,36 +99,40 @@
           </div>
         </div>
       </div>
-      <div class="px-2 h-full w-full" id="rentas_destacadas">
-        <p class="text-3xl text-primary font-semibold pb-6 mt-6">
-          Rentas Destacadas
+      <div class="px-6 w-auto lg:px-2" id="rentas_destacadas">
+        <p class="text-3xl text-primary font-semibold pb-6 mt-2">
+          Rentas destacadas
         </p>
-        <div
-          class="w-full h-full flex flex-col space-y-6 items-center justify-center"
-        >
-          <div class="w-full h-96 bg-chicago bg-cover rounded-xl">
-            <p class="CardTitle">Chicago</p>
-            <p class="text-sm pl-8 text-black mr-24">
-              2 habitaciones, baño, cocina
+        <div class="w-full h-full flex flex-col items-center justify-center">
+          <div
+            class="w-full h-96 bg-chicago bg-cover rounded-xl mb-6 lg:bg-center"
+          >
+            <p class="CardTitle lg:text-b">Chicago</p>
+            <p class="text-sm pl-8 text-white mr-24 lg:text-lg">
+              2 habitaciones, baño y cocina
             </p>
           </div>
-          <div class="w-full h-96 bg-iceland bg-cover rounded-xl">
-            <p class="CardTitle">Iceland</p>
-            <p class="text-sm pl-8 text-black mr-24">
-              2 habitaciones, baño, cocina
-            </p>
-          </div>
-          <div class="w-full h-96 bg-bali bg-cover rounded-xl">
-            <p class="CardTitle">Bali</p>
-            <p class="text-sm pl-8 text-white mr-24">
-              2 habitaciones, baño, cocina
-            </p>
-          </div>
-          <div class="w-full h-96 bg-Miami bg-cover rounded-xl">
-            <p class="CardTitle">Miami</p>
-            <p class="text-sm pl-8 text-white mr-24">
-              2 habitaciones, baño, cocina
-            </p>
+          <div class="lg:flex lg:h-full lg:w-full lg:space-x-4">
+            <div class="w-full h-96 bg-LA bg-cover rounded-xl mb-6 lg:h-auto">
+              <p class="CardTitle">Los Angeles</p>
+              <p class="text-sm pl-8 text-white mr-24 lg:text-lg">
+                3 habitaciones, 2 baños, cocina y excelente vista al mar.
+              </p>
+            </div>
+            <div class="h-full w-full">
+              <div class="w-full h-96 bg-miami bg-cover rounded-xl mb-6">
+                <p class="CardTitle">Miami</p>
+                <p class="text-sm pl-8 text-white mr-24 lg:text-lg">
+                  4 habitaciones, 3 baños, cocina y piscina privada
+                </p>
+              </div>
+              <div class="w-full h-96 bg-bali bg-cover rounded-xl mb-6">
+                <p class="CardTitle">Bali</p>
+                <p class="text-sm pl-8 text-white mr-24 lg:text-lg">
+                  2 habitaciones, baño, cocina y piscina privada
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
