--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,82 @@
     />
   </head>
   <body class="font-Montserrat">
-    <nav></nav>
+    <nav class="w-full h-14 hidden bg-white lg:flex p-4 justify-between">
+      <div class="h-auto w-auto">
+        <p class="text-xl text-primary font-black">Platzi Travel</p>
+      </div>
+      <div class="flex space-x-8">
+        <a class="font-bold text-md text-primary" href="#home">Inicio</a>
+        <a class="font-bold text-md text-primary" href="#recomendados"
+          >Recomendados</a
+        >
+        <a class="font-bold text-md text-primary" href="#rentas_destacadas"
+          >Rentas</a
+        >
+        <a class="font-bold text-md text-primary" href="#fasq">FAQS</a>
+        <a class="font-bold text-md text-primary" href="#sobre_nosotros"
+          >Sobre nosotros</a
+        >
+      </div>
+      <div class="flex space-x-4">
+        <div>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            strokeWidth="{2}"
+            stroke="currentColor"
+            width="30"
+            height="30"
+          >
+            <path
+              class="text-primary"
+              strokeLinecap="round"
+              strokeLinejoin="round"
+              d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"
+            />
+          </svg>
+        </div>
+        <div>
+          <button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              width="30"
+              height="30"
+            >
+              <path
+                class="text-primary"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z"
+              />
+            </svg>
+          </button>
+        </div>
+        <div>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            strokeWidth="{1.5}"
+            stroke="currentColor"
+            width="30"
+            height="30"
+          >
+            <path
+              class="text-primary"
+              strokeLinecap="round"
+              strokeLinejoin="round"
+              d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"
+            />
+          </svg>
+        </div>
+      </div>
+    </nav>
     <section class="w-full h-screen">
       <div id="home">
         <div class="w-full h-3/4">
@@ -169,7 +244,7 @@
           </div>
         </div>
       </div>
-      <footer class="w-full h-64 bg-gray-50 p-6 space-y-2">
+      <footer class="w-full h-64 bg-gray-50 p-6 space-y-2" id="sobre_nosotros">
         <p class="text-lg">Acerca de</p>
         <p class="text-sm text-gray-300">Acerca de</p>
         <p class="text-sm text-gray-300">Inversión</p>
